src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <required>true</required>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <description>Employee Bio</description>
        <inlineHelpText>Enter Employee&apos;s detailed description.</inlineHelpText>
        <label>Bio</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blog__c</fullName>
        <description>Employee Blog</description>
        <inlineHelpText>&quot;Enter the URL to employee&apos;s blog</inlineHelpText>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <description>Employee Commission</description>
        <inlineHelpText>Enter 0 for employees without commission</inlineHelpText>
        <label>Commission</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of birth</description>
        <inlineHelpText>Date Help Text</inlineHelpText>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <description>Date and time of joining</description>
        <inlineHelpText>Date and time for the first time employee punched</inlineHelpText>
        <label>Date of Joining</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Education_Details__c</fullName>
        <description>Employee Education Qualification Details</description>
        <inlineHelpText>&quot;Enter employee education qualifications</inlineHelpText>
        <label>Education Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Field Description</description>
        <inlineHelpText>Email Help Text</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FieldTest13__c</fullName>
        <description>TextArea Field Description</description>
        <inlineHelpText>TextArea Help Text</inlineHelpText>
        <label>FieldTest13</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieldTest16__c</fullName>
        <description>Testing Url Field Description</description>
        <inlineHelpText>Testing Url Field Help Text</inlineHelpText>
        <label>FieldTest16</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieldTest21__c</fullName>
        <description>Testing Url Field Description</description>
        <inlineHelpText>Testing Url Field Help Text</inlineHelpText>
        <label>FieldTest21</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Female</fullName><default>false</default><label>Female</label></value>
                <value><fullName>Male</fullName><default>false</default><label>Male</label></value>
                <value><fullName>Others</fullName><default>false</default><label>Others</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsValid1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>IsValid1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValid2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>IsValid2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValid3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>IsValid3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_eeravc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maritial Status</description>
        <inlineHelpText>Check if Married</inlineHelpText>
        <label>M@eeravc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee&apos;s Manager</description>
        <inlineHelpText>Reporting Manager</inlineHelpText>
        <label>Manager</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maritial Status</description>
        <inlineHelpText>Check if Married</inlineHelpText>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Phone Field Description</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Employee Name as per official documents</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>Salary</description>
        <inlineHelpText>Currency Help Text</inlineHelpText>
        <label>Salary</label>
        <precision>12</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <description>Employee Skills</description>
        <inlineHelpText>Select Multiple Skills from the given list</inlineHelpText>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>C/C++</fullName><default>false</default><label>C/C++</label></value>
                <value><fullName>Java</fullName><default>false</default><label>Java</label></value>
                <value><fullName>PHP</fullName><default>false</default><label>PHP</label></value>
                <value><fullName>Ruby</fullName><default>false</default><label>Ruby</label></value>
                <value><fullName>Salesforce</fullName><default>false</default><label>Salesforce</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>